# rust-demos

./: .gitignore  README.md
apps/web/parking/: Cargo.toml  README.md
apps/web/parking/app/: Cargo.toml
apps/web/parking/domain/: Cargo.toml
apps/web/parking/domain/src/: command.rs  event.rs  lib.rs  parking.rs  plate.rs
apps/web/parking/domain/src/command/: charge.rs  check_in.rs
examples/grpc/: Cargo.toml  README.md  build.rs
examples/grpc/proto/: chat.proto
examples/grpc/src/: chat.rs  client.rs  server.rs
examples/macros/: Cargo.toml  README.md
examples/macros/declarative/src/: lib.rs
examples/macros/procedural/: Cargo.toml
examples/macros/procedural/src/: lib.rs
examples/macros/procedural/templates/: builder.j2
examples/macros/procedural/tests/: integration_test.rs
examples/protobuf/: Cargo.toml  README.md  build.rs
examples/protobuf/src/: rpc.proto  rpc.rs
kv-server/: README.md
kv-server/core/: Cargo.toml  build.rs
kv-server/core/src/: command.rs  error.rs
kv-server/core/src/command/: command.proto
kv-server/server/: Cargo.toml
kv-server/server/src/: command_handler.rs  main.rs  storage.rs
kv-server/server/src/storage/: memory.rs
libs/algorithms/src/: lib.rs  linked_list.rs
samples/kv-server/: Cargo.toml  README.md
samples/kv-server/client/: Cargo.toml
samples/kv-server/core/: Cargo.toml
samples/kv-server/core/src/: domain.rs  error.rs
samples/kv-server/server/: Cargo.toml
samples/kv-server/server/src/: command_handler.rs  main.rs  request_handler.rs  storage.rs
samples/kv-server/server/src/storage/: memory.rs
samples/mpsc/: Cargo.toml  README.md
samples/mpsc/src/: lib.rs
