[package]
name = "kv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.12"
thiserror = "1"
tracing = "0.1"

[build-dependencies]
prost-build = "0.12"
